# DumbTrader

./: .gitignore  README.md
cpp/: CMakeLists.txt  build.sh
cpp/include/dumbtrader/ipc/: posix_semaphore.h  posix_shared_memory.h  posix_shared_memory_ring_buffer.h  posix_wrapper.h
cpp/include/dumbtrader/network/: openssl.h  socket.h  websocket.h
cpp/include/dumbtrader/order_book/: order.h  order_book.h
cpp/include/dumbtrader/utils/: error.h  iouring.h  openssl.h
cpp/src/: CMakeLists.txt
cpp/src/dumbtrader/: CMakeLists.txt  consumer.cpp  producer.cpp
cpp/src/dumbtrader/container/: CMakeLists.txt
cpp/src/dumbtrader/ipc/: CMakeLists.txt  posix_semaphore.cpp  posix_shared_memory.cpp  posix_shared_memory_ring_buffer.cpp  posix_wrapper.cpp  posix_wrapper.h
cpp/src/dumbtrader/network/: CMakeLists.txt  openssl.cpp  socket.cpp  websocket.cpp
cpp/src/dumbtrader/order_book/: CMakeLists.txt  order_book.cpp
cpp/src/dumbtrader/utils/: CMakeLists.txt  error.cpp
cpp/tests/: CMakeLists.txt  sem_consumer.cpp  sem_producer.cpp  test_orderbook.cpp  test_ring_buffer.cpp  test_sem.cpp  test_shared_mem.cpp  test_socket.cpp  test_uring_read_file.cpp  test_uring_read_websocket.cpp  test_websocket.cpp  test_websocket_uring.cpp
credentials/: telegram-bot-config.json
python/: backtest_find_gird_best_param.py  backtest_grid.py  backtest_multi_ema.py  order_listener.py  paper_trading.py  print_book_data_ws.py
python/dumbtrader/api/okxws/: client.py
python/dumbtrader/backtest/: backtester.py
python/dumbtrader/livetrading/: okx_executor.py
python/dumbtrader/monitoring/: logger.py
python/dumbtrader/strategy/: grid_strategy.py  multi_ema_strategy.py  strategy.py
python/dumbtrader/utils/: pickle_csv.py
src/python/: backtest_ema_grid.py  backtest_find_gird_best_param.py  backtest_grid.py  backtest_multi_ema.py  convert_csv_to_pickled_df.py  find_gird_best_param.py  grid_usage_demo.py  order_listener.py  paper_trading.py  record_trade_data_ws.py
src/python/dumbtrader/api/: record_trade_data_ws.py  test_okx_ws.py
src/python/dumbtrader/api/okx/: okxapiws.py  okxconstants.py
src/python/dumbtrader/api/okxws/: client.py  constants.py
src/python/dumbtrader/backtest/: backtester.py
src/python/dumbtrader/livetrading/: okx_executor.py
src/python/dumbtrader/monitoring/: logger.py  telegram_adapter.py  telegram_bot.py
src/python/dumbtrader/strategy/: grid_strategy.py  multi_ema_strategy.py  shannon-grid.py  strategy.py  strategy_constants.py
src/python/dumbtrader/utils/: file_utils.py
