add_executable(test_sem test_sem.cpp)
add_executable(test_shared_mem test_shared_mem.cpp)
add_executable(test_ring_buffer test_ring_buffer.cpp)
add_executable(test_socket test_socket.cpp)
add_executable(test_websocket test_websocket.cpp)
add_executable(test_orderbook test_orderbook.cpp)

find_package(OpenSSL REQUIRED)

target_include_directories(test_sem PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_include_directories(test_shared_mem PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_include_directories(test_ring_buffer PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_include_directories(test_socket PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_include_directories(test_websocket PUBLIC ${PROJECT_SOURCE_DIR}/include ${OPENSSL_INCLUDE_DIR})
target_include_directories(test_orderbook PUBLIC ${PROJECT_SOURCE_DIR}/include)

target_link_libraries(test_sem PRIVATE -lpthread dumbtrader)
target_link_libraries(test_shared_mem PRIVATE -lpthread dumbtrader)
target_link_libraries(test_ring_buffer PRIVATE -lpthread dumbtrader)
target_link_libraries(test_socket PRIVATE -lpthread dumbtrader)
target_link_libraries(test_websocket PRIVATE -lpthread OpenSSL::SSL OpenSSL::Crypto dumbtrader)
target_link_libraries(test_orderbook PRIVATE dumbtrader)